--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.amrabdalfatah.expenses_personal_app">
    <application
-        android:label="expenses_personal_app"
+        android:label="Personal Expenses"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
